<resources>
    <string name="app_name">Radar</string>
    <string name="menu_action_events_text">Events</string>
    <string name="menu_action_create_text">Create</string>
    <string name="menu_action_profile_text">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="you_have_no_new_notifications">You have no new notifications</string>
    <string name="failed_to_load_notifications">Failed to Load Notifications</string>
    <string name="event_background_image_description">Background image for the event</string>
    <string name="sample_event_title">Event Title Here</string>
    <string name="sample_date">18\nDEC</string>
    <string name="filter_view_qr">View QR</string>
    <string name="my_google_api_key">AIzaSyDGG-HGaYV19KxN23NtH6ccAOP0aNOejY0</string>
    <string name="intent_action_view_event">com.rocket.radar.events.VIEW_EVENT</string>
    <string name="intent_action_show_qr">com.rocket.radar.VIEW_QRCODE</string>
    <string name="criteria_and_guidelines">By downloading this app you agree to the following criteria:\n\n1. You are at least 18 years old.\n2. You will not use the app for any illegal activities.\n3. You will respect the privacy of others while using the app.\n4. You understand that the app is provided as-is without any warranties.\n5. You agree to comply with all applicable laws and regulations while using the app.</string>
    <string name="criteria_and_guidelines_title"><u>Criteria and Guidelines</u></string>
    <string name="people_on_waitlist_loading">People on waitlist: [Loading ...]</string>
    <string name="date_picker_text">After Date:</string>
    <string name="users">Users</string>
    <string name="images">Images</string>
</resources>
