<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/eventListFragment"
        android:title="@string/menu_action_events_text"
        android:icon="@drawable/ic_view_agenda_24dp" />

    <item
        android:id="@+id/draftEventsFragment"
        android:title="@string/menu_action_create_text"
        android:icon="@drawable/ic_add_menu" />

    <item
        android:id="@+id/imagesFragment"
        android:title="@string/images"
        android:icon="@drawable/ic_image_24dp" />

    <item
        android:id="@+id/usersFragment"
        android:title="@string/users"
        android:icon="@drawable/ic_patient_list_24dp" />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/menu_action_profile_text"
        android:icon="@drawable/ic_person_24dp" />
</menu>
